added user profile page
