# src/openapi/openapi.json
@@ -1,11 +1,11 @@
 {
   "openapi": "3.0.1",
   "info": {
-    "title": "Open API specification - Nurgissa",
-    "description": "Open API documentation for QueueOverFlow project",
+    "title": "Open API specification - Erasyl",
+    "description": "Open API documentation for project",
     "contact": {
-      "name": "Nurgissa",
-      "email": "nkabarbek03@gmail.com"
+      "name": "Erasyl",
+      "email": "erosik@gmail.com"
     },
     "version": "1.0"
   },
@@ -198,6 +198,56 @@
         }
       }
     },
+    "/api/v1/volunteer/username": {
+      "get": {
+        "tags": [
+          "volunteer-controller"
+        ],
+        "operationId": "getVolunteerByUsername",
+        "parameters": [
+          {
+            "name": "username",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/organization/": {
+      "get": {
+        "tags": [
+          "organization-controller"
+        ],
+        "operationId": "getAllOrganizations",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/v1/event/": {
       "get": {
         "tags": [
@@ -298,6 +348,9 @@
             "type": "integer",
             "format": "int64"
           },
+          "city": {
+            "type": "string"
+          },
           "eventType": {
             "type": "string",
             "enum": [
@@ -329,7 +382,7 @@
         "properties": {
           "username": {
             "maxLength": 2147483647,
-            "minLength": 8,
+            "minLength": 6,
             "type": "string"
           },
           "password": {
